--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Sophie Martin"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "PhD Student at University College London, interested in interpretable machine learning"
   location         : 
   employer         :
