--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,7 @@
 # main links links
 main:
 
-#   - title: "Talks"
-#     url: /talks/    
+ 
 
 #   - title: "Teaching"
 #     url: /teaching/    
@@ -12,12 +11,15 @@ main:
   
   - title: "Projects"
     url: /projects/
-          
+    
   - title: "Publications"
     url: /publications/
     
   - title: "Blog"
     url: /blog/
+
+  - title: "Talks"
+    url: /talks/  
     
   - title: "CV"
     url: /cv/
