--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,15 +8,15 @@ main:
     
 #   - title: "Portfolio"
 #     url: /portfolio/
+    
+  - title: "Publications"
+    url: /publications/
   
   - title: "Projects"
     url: /projects/
     
-  - title: "Publications"
-    url: /publications/
-    
-  - title: "Blog"
-    url: /blog/
+#   - title: "Blog"
+#     url: /blog/
 
   - title: "Talks"
     url: /talks/  
