--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,7 +19,7 @@ main:
     url: /talks/  
     
   - title: "CV"
-    url: /cv/
+    url: https://sophmrtn.github.io/files/sophie_cv.pdf
     
 #   - title: "Guide"
 #     url: /markdown/
