--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,9 +3,7 @@ main:
 
  
 
-#   - title: "Teaching"
-#     url: /teaching/    
-    
+
   - title: "Publications"
     url: /publications/
   
@@ -17,6 +15,9 @@ main:
 
   - title: "Talks"
     url: /talks/  
+    
+  - title: "Teaching"
+  url: /teaching/    
     
   - title: "CV"
     url: https://sophmrtn.github.io/files/sophie_cv.pdf
