--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@ main:
     url: /teaching/    
     
   - title: "CV"
-    url: /cv/
+    url: https://sophmrtn.github.io/files/sophie_cv.pdf
 
 #   - title: "Blog"
 #     url: /blog/
