--- a/_config.yml
+++ b/_config.yml
@@ -227,10 +227,10 @@ defaults:
       author_profile: true
       share: true
       comments: true
-  # _projects
+  # _outreach
   - scope:
       path: ""
-      type: projects
+      type: outreach
     values:
       layout: single
       author_profile: true
