--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   - title: "Teaching"
     url: /teaching/    
   
-  - title: "Projects"
-    url: /projects/     
+  - title: "Outreach"
+    url: /outreach/     
     
   - title: "CV"
     url: https://sophmrtn.github.io/files/sophie_cv.pdf
